// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _accessKey="V" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _accesskey="V" _hint="" _label="Label" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _alert=true 1`] = `
<kol-select _alert="" _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _disabled=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _disabled="" _hint="" _label="Label" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _hint="Hint" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="Hint" _label="Label" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _touched="" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top" _touched="">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _accessKey="V" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _accesskey="V" _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _alert=true 1`] = `
<kol-select _alert="" _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _disabled=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _disabled="" _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _hint="Hint" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="Hint" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _touched="" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top" _touched="">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _readOnly=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _readonly="" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _shortKey="S" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _shortkey="S" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _touched=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _touched="" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top" _touched="">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _value=["Divers","Frau"] _accessKey="V" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _accesskey="V" _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _value=["Divers","Frau"] _alert=true 1`] = `
<kol-select _alert="" _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _value=["Divers","Frau"] _disabled=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _disabled="" _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _value=["Divers","Frau"] _hint="Hint" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="Hint" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _value=["Divers","Frau"] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _value=["Divers","Frau"] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _value=["Divers","Frau"] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _value=["Divers","Frau"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _touched="" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top" _touched="">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _value=["Divers","Frau"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _value=["Divers","Frau"] _readOnly=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _readonly="" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _value=["Divers","Frau"] _shortKey="S" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _shortkey="S" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _value=["Divers","Frau"] _touched=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _touched="" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top" _touched="">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _value=["Divers","Frau"] 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _multiple="" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _readOnly=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _readonly="" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _shortKey="S" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _shortkey="S" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _touched=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _touched="" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top" _touched="">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _value="Herr" _accessKey="V" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _value="Herr" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _accesskey="V" _hint="" _label="Label" _name="field" _tooltipalign="top" _value="Herr">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _value="Herr" _alert=true 1`] = `
<kol-select _alert="" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top" _value="Herr">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _value="Herr" _disabled=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _value="Herr" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _disabled="" _hint="" _label="Label" _name="field" _tooltipalign="top" _value="Herr">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _value="Herr" _hint="Hint" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _value="Herr" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="Hint" _label="Label" _name="field" _tooltipalign="top" _value="Herr">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _value="Herr" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _value="Herr" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top" _value="Herr">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _value="Herr" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _value="Herr" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top" _value="Herr">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _value="Herr" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _value="Herr" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top" _value="Herr">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _value="Herr" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _touched="" _value="Herr" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top" _touched="" _value="Herr">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _value="Herr" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _value="Herr" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top" _value="Herr">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _value="Herr" _readOnly=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _readonly="" _value="Herr" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top" _value="Herr">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _value="Herr" _shortKey="S" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _value="Herr" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _shortkey="S" _tooltipalign="top" _value="Herr">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _value="Herr" _touched=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _touched="" _value="Herr" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top" _touched="" _value="Herr">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _value="Herr" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _value="Herr" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top" _value="Herr">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" class="kol-select">
  <template shadowrootmode="open">
    <kol-select-wc _hint="" _label="Label" _name="field" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-select-wc>
  </template>
</kol-select>
`;
